[gd_scene load_steps=13 format=2]

[ext_resource path="res://Animations.gd" type="Script" id=1]
[ext_resource path="res://fonts/TextGeneric.tres" type="DynamicFont" id=2]
[ext_resource path="res://Audio/respawn.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Hit"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Hit:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.486275, 0.486275, 0.607843 ), Color( 0.988235, 0.52549, 0.52549, 0.290196 ), Color( 0.988235, 0.52549, 0.52549, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Hit:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Hit:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.988235, 0.52549, 0.52549, 0.290196 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Heal"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Heal:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 1, 0.203922, 0.74902 ), Color( 0, 1, 0.203922, 0.392157 ), Color( 0, 1, 0.203922, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Heal:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Heal:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 1, 0.203922, 0.0901961 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../CanvasLayer/BlackTransition:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CanvasLayer/BlackTransition:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "Transition"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("../CanvasLayer/BlackTransition:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CanvasLayer/BlackTransition:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=7]
resource_name = "Interact"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../CanvasLayer/CenterContainer/Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CanvasLayer/CenterContainer/Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../CanvasLayer/CenterContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../CanvasLayer/BlackTransition:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CanvasLayer/BlackTransition:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../CanvasLayer/CenterContainer/Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Transition"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("../CanvasLayer/BlackTransition:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CanvasLayer/BlackTransition:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Animations" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Hit" type="ColorRect" parent="CanvasLayer"]
margin_right = 1279.0
margin_bottom = 720.0
color = Color( 0.988235, 0.52549, 0.52549, 0.290196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heal" type="ColorRect" parent="CanvasLayer"]
visible = false
margin_right = 1279.0
margin_bottom = 720.0
color = Color( 0, 1, 0.203922, 0.0901961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackTransition" type="ColorRect" parent="CanvasLayer"]
visible = false
margin_right = 1282.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -546.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 479.0
margin_top = 58.0
margin_right = 801.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 2 )
text = "Interact [e]"

[node name="PlayerHit" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/Hit = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="PlayerHeal" type="AnimationPlayer" parent="."]
anims/Heal = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="Transitions" type="AnimationPlayer" parent="."]
root_node = NodePath("../PlayerHeal")
anims/RESET = SubResource( 5 )
anims/Transition = SubResource( 6 )

[node name="InteractText" type="AnimationPlayer" parent="."]
root_node = NodePath("../PlayerHeal")
anims/Interact = SubResource( 7 )
anims/RESET = SubResource( 8 )
anims/Transition = SubResource( 9 )

[node name="respawn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
